# robot

./: .gitignore  README.md  tmp.rviz
src/head_unit/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/head_unit/calibration/: ost.txt  ost.yaml
src/head_unit/launch/: ekf_test.launch  head_unit.launch  imu_test.launch  odom_test.launch  rgbd_cloud.launch  stereo_camera.launch  stereo_camera_left.launch  stereo_camera_right.launch  stereo_camera_view_left.launch  vo_test.launch  xv_11_test.launch
src/head_unit/scripts/: kinect2_setup.sh
src/head_unit/urdf/: head_unit.urdf  head_unit.xacro  head_unit_mkii.urdf  head_unit_mkii.xacro  kinect2.urdf  kinect2.xacro  project_tango.xacro
src/head_unit/urdf/meshes/: t-slot-bracket.stl  t-slot-rod.stl
src/mobile_base/: CMakeLists.txt  package.xml
src/mobile_base/arduino/big_encoder_test/: big_encoder_test.ino
src/mobile_base/arduino/dbr_6dof/: dbr_6dof.ino
src/mobile_base/arduino/dbr_6dof_2/: dbr_6dof_2.ino
src/mobile_base/arduino/dbr_6dof_3/: dbr_6dof_3.ino
src/mobile_base/arduino/dbr_6dof_test_1/: dbr_6dof_test_1.ino
src/mobile_base/arduino/drive_mark_ii/: drive_mark_ii.ino
src/mobile_base/arduino/mark_ii_2encoder_test_quarter_count/: mark_ii_2encoder_test_quarter_count.ino
src/mobile_base/arduino/mark_ii_encoder_test/: mark_ii_encoder_test.ino
src/mobile_base/arduino/mark_ii_encoder_test_4pm/: mark_ii_encoder_test_4pm.ino
src/mobile_base/arduino/mark_ii_encoder_test_works/: mark_ii_encoder_test_works.ino
src/mobile_base/arduino/mark_ii_encoders_only/: mark_ii_encoders_only.ino
src/mobile_base/arduino/mark_ii_motors_only/: mark_ii_motors_only.ino
src/mobile_base/arduino/mobile_base_mkii/: mobile_base_mkii.ino
src/mobile_base/arduino/mobile_base_mkii_refactor/: mega_moto.cpp  mega_moto.h  mobile_base_mkii_refactor.ino  robot_specs.h  (+3 more)
src/mobile_base/launch/: imu_test.launch  mobile_base.launch  mobile_base_no_odom.launch
src/mobile_base/src/: base_controller.cpp
src/mobile_base/urdf/: mobile_base.urdf  mobile_base_mkii.urdf  mobile_base_mkii.xacro
src/navbot/: CMakeLists.txt  CMakeLists.txt~  navbot.rviz  package.xml  package.xml~
src/navbot/configs/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/navbot/launch/: imu.launch  mark_i_navbot.launch  mark_ii_navbot.launch  move_base.launch  navbot.launch  navbot_amcl_nk_ii.launch  navbot_slam_mk_ii.launch  odom.launch  tune_urdf.launch  vo.launch
src/navbot/maps/: map.pgm  map2.pgm  map3.pgm  map4.pgm  map5.pgm
src/navbot/udev_rules/: 51-arduino.rules  52-ftdi.rules  54-teensyduino.rules  55-webcam.rules  58-kinect.rules
src/navbot/urdf/: navbot.urdf  navbot.xacro  navbot_mkii.urdf  navbot_mkii.xacro
src/teleop/: CMakeLists.txt~  nav.rviz  package.xml  package.xml~  teleop.rviz
src/teleop/launch/: teleop.launch
src/teleop/scripts/: web_teleop.sh
src/teleop/web_server/: teleop.html
(+27 files in other folders)
